fixes a minor issue with a horizontal scrollbar

--- a/TOOLS/bp/core/src/main/resources/org/opalj/bugpicker/core/analysis/report.css
+++ b/TOOLS/bp/core/src/main/resources/org/opalj/bugpicker/core/analysis/report.css
@@ -74,6 +74,7 @@ div.an_issue{
 	border: 1px solid  rgb(224, 222, 235);
 	border-top: 0px;
 	display: none;
+	word-break: break-word;
 }
 
 div.an_issue.issue_visible{
